Configures entry detail view controller

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.92462086399999999" green="0.92462086399999999" blue="0.92462086399999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="etS-Br-3Xi" firstAttribute="bottom" secondItem="22B-2n-4fh" secondAttribute="bottom" constant="16" id="P3M-d1-TaD"/>
                             <constraint firstItem="22B-2n-4fh" firstAttribute="leading" secondItem="etS-Br-3Xi" secondAttribute="leading" constant="16" id="RKM-ue-ccH"/>
@@ -159,6 +159,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="JLR-Il-4k6"/>
+        <segue reference="4aG-Mr-VLg"/>
     </inferredMetricsTieBreakers>
 </document>
