Fixed some issues. App is now complete

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -67,9 +67,9 @@
                                     <constraint firstAttribute="trailing" secondItem="vQ1-Jc-m8h" secondAttribute="trailing" constant="20" id="Wn0-Ak-0Rk"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="bodyLabel" destination="Gr6-9a-3bw" id="DLa-dd-Dcm"/>
-                                    <outlet property="timestampLabel" destination="vQ1-Jc-m8h" id="ahn-JN-zao"/>
-                                    <outlet property="titleLabel" destination="May-Ok-iUA" id="P1w-j1-NnB"/>
+                                    <outlet property="bodyLabel" destination="Gr6-9a-3bw" id="DKa-Gw-z54"/>
+                                    <outlet property="timestampLabel" destination="vQ1-Jc-m8h" id="dkU-fc-p5n"/>
+                                    <outlet property="titleLabel" destination="May-Ok-iUA" id="8Cq-Uh-nwc"/>
                                     <segue destination="S9Q-mB-3EU" kind="show" identifier="ShowEntryDetail" id="uoO-du-nZ4"/>
                                 </connections>
                             </tableViewCell>
