--- a/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
+++ b/JournalWithCoreData/JournalWithCoreData/Resources/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tzI-Pj-wM7">
-                                <rect key="frame" x="16" y="140" width="343" height="30"/>
+                                <rect key="frame" x="16" y="165" width="343" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="7oJ-RK-YdN"/>
                                 </constraints>
@@ -107,20 +107,31 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nhL-SA-Stk">
-                                <rect key="frame" x="16" y="178" width="343" height="233"/>
+                                <rect key="frame" x="16" y="203" width="343" height="208"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ID6-oE-1TA">
+                                <rect key="frame" x="16" y="129" width="343" height="29"/>
+                                <segments>
+                                    <segment title="🙁"/>
+                                    <segment title="😐"/>
+                                    <segment title="🙂"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" red="0.82568794489999997" green="0.95160108799999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="tzI-Pj-wM7" firstAttribute="top" secondItem="AEy-v2-xB2" secondAttribute="top" constant="24" id="3PM-cU-x6C"/>
                             <constraint firstItem="AEy-v2-xB2" firstAttribute="bottom" secondItem="nhL-SA-Stk" secondAttribute="bottom" constant="256" id="6VS-g1-VLl"/>
+                            <constraint firstItem="ID6-oE-1TA" firstAttribute="leading" secondItem="AEy-v2-xB2" secondAttribute="leading" constant="16" id="8bd-iQ-bRU"/>
+                            <constraint firstItem="ID6-oE-1TA" firstAttribute="top" secondItem="AEy-v2-xB2" secondAttribute="top" constant="13" id="Ad2-gq-WsH"/>
                             <constraint firstItem="tzI-Pj-wM7" firstAttribute="leading" secondItem="AEy-v2-xB2" secondAttribute="leading" constant="16" id="IM5-1g-jNp"/>
                             <constraint firstItem="nhL-SA-Stk" firstAttribute="top" secondItem="tzI-Pj-wM7" secondAttribute="bottom" constant="8" id="RST-6L-1OH"/>
                             <constraint firstItem="AEy-v2-xB2" firstAttribute="trailing" secondItem="tzI-Pj-wM7" secondAttribute="trailing" constant="16" id="Ujz-uO-VLS"/>
+                            <constraint firstItem="tzI-Pj-wM7" firstAttribute="top" secondItem="ID6-oE-1TA" secondAttribute="bottom" constant="8" id="mE0-r1-CZK"/>
                             <constraint firstItem="nhL-SA-Stk" firstAttribute="leading" secondItem="AEy-v2-xB2" secondAttribute="leading" constant="16" id="mKy-wF-Fi1"/>
+                            <constraint firstItem="AEy-v2-xB2" firstAttribute="trailing" secondItem="ID6-oE-1TA" secondAttribute="trailing" constant="16" id="whx-dd-ELL"/>
                             <constraint firstItem="AEy-v2-xB2" firstAttribute="trailing" secondItem="nhL-SA-Stk" secondAttribute="trailing" constant="16" id="xZN-Tn-1bj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="AEy-v2-xB2"/>
@@ -134,6 +145,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextTextView" destination="nhL-SA-Stk" id="PPf-rb-OW2"/>
+                        <outlet property="moodSegmentControl" destination="ID6-oE-1TA" id="HPF-Um-vbd"/>
                         <outlet property="titleTextField" destination="tzI-Pj-wM7" id="Do1-ng-VY2"/>
                     </connections>
                 </viewController>
