Fixed some bugs from last time'

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -29,14 +29,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="62.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" misplaced="YES" text="Journal Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvh-mt-MY9">
-                                            <rect key="frame" x="16" y="11" width="260" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Journal Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvh-mt-MY9">
+                                            <rect key="frame" x="16" y="11" width="102" height="21"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="753" misplaced="YES" text="8/8/18 12:12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ItE-X9-iIt">
-                                            <rect key="frame" x="284" y="14" width="75" height="16"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="754" verticalCompressionResistancePriority="754" text="8/8/18 12:12" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ItE-X9-iIt">
+                                            <rect key="frame" x="126" y="14" width="233" height="16"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -49,15 +49,15 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="yvh-mt-MY9" secondAttribute="trailing" constant="9" id="AUQ-FL-STE"/>
                                         <constraint firstItem="yvh-mt-MY9" firstAttribute="top" secondItem="g9q-lY-vx3" secondAttribute="topMargin" id="DcE-6u-Fag"/>
-                                        <constraint firstItem="ItE-X9-iIt" firstAttribute="leading" secondItem="yvh-mt-MY9" secondAttribute="trailing" constant="8" id="KcA-tf-qx4"/>
+                                        <constraint firstItem="ItE-X9-iIt" firstAttribute="leading" secondItem="yvh-mt-MY9" secondAttribute="trailing" constant="8" id="GJ1-e1-HTX"/>
                                         <constraint firstItem="ZSM-Z5-SMy" firstAttribute="firstBaseline" secondItem="yvh-mt-MY9" secondAttribute="baseline" constant="24" symbolType="layoutAnchor" id="QN0-Ar-QC5"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="ZSM-Z5-SMy" secondAttribute="bottom" id="d6T-oh-DJO"/>
                                         <constraint firstItem="ZSM-Z5-SMy" firstAttribute="leading" secondItem="yvh-mt-MY9" secondAttribute="leading" id="jzM-tk-An1"/>
                                         <constraint firstItem="ItE-X9-iIt" firstAttribute="trailing" secondItem="g9q-lY-vx3" secondAttribute="trailingMargin" id="kGx-da-b4b"/>
                                         <constraint firstItem="yvh-mt-MY9" firstAttribute="leading" secondItem="g9q-lY-vx3" secondAttribute="leadingMargin" id="khs-uW-KJZ"/>
                                         <constraint firstItem="ItE-X9-iIt" firstAttribute="centerY" secondItem="yvh-mt-MY9" secondAttribute="centerY" id="qxF-Ph-kkT"/>
+                                        <constraint firstItem="ItE-X9-iIt" firstAttribute="leading" secondItem="yvh-mt-MY9" secondAttribute="trailing" constant="8" id="tR8-V7-LFD"/>
                                         <constraint firstItem="ZSM-Z5-SMy" firstAttribute="trailing" secondItem="g9q-lY-vx3" secondAttribute="trailingMargin" id="uuv-LD-7Er"/>
                                     </constraints>
                                 </tableViewCellContentView>
